--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
+  "type": "module",
+  "scripts": {
+    "server:dev": "nodemon server/init.js"
+  },
   "dependencies": {
     "aws-sdk": "^2.1108.0",
+    "dotenv": "^16.0.0",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0"
   }
