--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "dotenv": "^16.0.0",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
