--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -8,4 +8,9 @@
 -i https://pypi.org/simple
 beautifulsoup4==4.10.0; python_version >= '3.1'
 bs4==0.0.1
+numpy==1.22.3; python_version < '3.10' and platform_machine != 'aarch64' and platform_machine != 'arm64'
+pandas==1.4.2
+python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pytz==2022.1
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 soupsieve==2.3.1; python_version >= '3.6'
