--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "scripts": {
-    "server:dev": "nodemon server/init.js"
+    "dev": "nodemon init.js"
   },
   "dependencies": {
     "aws-sdk": "^2.1108.0",
