--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
     "aws-sdk": "^2.1108.0",
     "dotenv": "^16.0.0",
     "multer": "^1.4.4",
-    "multer-s3": "^2.10.0"
+    "multer-s3": "^2.10.0",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.18.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
