--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "aws-sdk": "^2.1108.0",
     "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
     "mysql2": "^2.3.3",
