--- a/scripts/elasticsearch/docker-compose.yml
+++ b/scripts/elasticsearch/docker-compose.yml
@@ -9,6 +9,8 @@ services:
         ELASTIC_VERSION: ${ELASTIC_VERSION}
     volumes:
       - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,z
+      - ./elasticsearch/config/user_dictionary.txt:/usr/share/elasticsearch/config/user_dictionary.txt:ro,z
+      - ./elasticsearch/config/synonyms.txt:/usr/share/elasticsearch/config/synonyms.txt:ro,z
       - elasticsearch:/usr/share/elasticsearch/data:z
     ports:
       - "9200:9200"
