mysql root 비밀번호 환경변수 추가

--- a/scripts/data/elasticsearch/Dockerfile
+++ b/scripts/data/elasticsearch/Dockerfile
@@ -2,10 +2,10 @@ FROM tensorflow/tensorflow
 
 COPY index_data.py /index_data.py
 COPY image_feature.py /image_feature.py
-COPY /tf_models tf_models
+COPY /tf_models /tf_models
 
 RUN apt-get install -y git protobuf-compiler
-RUN pip install pillow elasticsearch pandas pymysql tensorflow pyparsing==2.4.2
+RUN pip install pillow elasticsearch pandas pymysql tensorflow pyparsing==2.4.2 tqdm
 RUN pip uninstall -y opencv-python && pip install "opencv-python-headless<4.3"
 
 RUN git clone https://github.com/tensorflow/models.git
@@ -15,3 +15,7 @@ RUN	protoc object_detection/protos/*.proto --python_out=. &&\
 	python -m pip install .
 
 RUN pip uninstall -y opencv-python && pip install "opencv-python-headless<4.3"
+
+ENV MYSQL_ROOT_PASSWORD=warigari
+
+WORKDIR /
