--- a/scripts/db/docker-compose.yml
+++ b/scripts/db/docker-compose.yml
@@ -2,12 +2,11 @@ version: "3.7"
 services:
   db:
     image: mysql:8.0.28
-    container_name: mysql
+    container_name: warigari_mysql
     ports:
       - "3306:3306"
-    environment:
-      - MYSQL_ROOT_PASSWORD=warigari
-      - TZ=Asia/Seoul
+    env_file:
+      - .env
     command:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
@@ -15,7 +14,10 @@ services:
     volumes:
       - /Users/Shared/data/mysql-test:/var/lib/mysql
     restart: always
+    networks:
+      - warigari_net
 
 networks:
-  warigari:
+  warigari_net:
     driver: bridge
+    name: warigari_net
