container이름 명시적으로 지정 및 네트워크 이름 지정

--- a/scripts/elasticsearch/config/docker-compose.yml
+++ b/scripts/elasticsearch/config/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       context: elasticsearch/
       args:
         ELASTIC_VERSION: ${ELASTIC_VERSION}
+    container_name: warigari_elasticsearch
     volumes:
       - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,z
       - ./elasticsearch/config/user_dictionary.txt:/usr/share/elasticsearch/config/user_dictionary.txt:ro,z
@@ -19,25 +20,27 @@ services:
       ES_JAVA_OPTS: -Xmx2g -Xms2g
       discovery.type: single-node
     networks:
-      - elk
+      - warigari_net
 
   kibana:
     build:
       context: kibana/
       args:
         ELASTIC_VERSION: ${ELASTIC_VERSION}
+    container_name: warigari_kibana
     volumes:
       - ./kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml:ro,Z
     ports:
       - "5601:5601"
     networks:
-      - elk
+      - warigari_net
     depends_on:
       - elasticsearch
 
 networks:
-  warigari:
+  warigari_net:
     driver: bridge
+    name: warigari_net
 
 volumes:
   elasticsearch:
