apt-get update 추가

--- a/scripts/data/elasticsearch/Dockerfile
+++ b/scripts/data/elasticsearch/Dockerfile
@@ -4,6 +4,7 @@ COPY index_data.py /index_data.py
 COPY image_feature.py /image_feature.py
 COPY /tf_models /tf_models
 
+RUN apt-get update
 RUN apt-get install -y git protobuf-compiler
 RUN pip install pillow elasticsearch pandas pymysql tensorflow pyparsing==2.4.2 tqdm
 RUN pip uninstall -y opencv-python && pip install "opencv-python-headless<4.3"
