--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,10 @@
 {
   "type": "module",
   "scripts": {
-    "dev": "nodemon init.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "8.1",
     "aws-sdk": "^2.1108.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
