--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "@elastic/elasticsearch": "8.1",
