--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Deploy Node Project
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     #     strategy:
     #       matrix:
@@ -20,14 +20,13 @@ jobs:
 
     steps:
       #       - uses: actions/checkout@v3
-      #       - name: Use Node.js ${{ matrix.node-version }}
-      #         uses: actions/setup-node@v3
-      #         with:
-      #           node-version: ${{ matrix.node-version }}
-      #           cache: 'npm'
-      - run: echo Hello World!
-      - run: echo Hi!
-      - name: AWS 세팅
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
